# GeoSpectral-Indices-toolkit

./: .gitignore  README.md  pyproject.toml
src/geospectral/: __init__.py  radar_indices.py  soil_salinty_indices.py  spectral_indices.py  vegetation_indices.py
