[tool.poetry]
name = "geospectral-indices-toolkit"
version = "0.1.0"
description = ""
authors = ["Taketoshi <takekazusa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
